--- a/style.css
+++ b/style.css
@@ -3,9 +3,12 @@
 	margin: 0;
 	outline:0;
 }
+body{
+	background-color: pink;
+}
 .container{
-	height: 100vh;
-	width: 100vw;
+	height: 100%;
+	width: 100%;
 	text-align:center;
 	color:#333;
 	background: pink;
