--- a/style.css
+++ b/style.css
@@ -5,6 +5,10 @@
 }
 body{
 	background-color: pink;
+	-webkit-background-size: cover;
+	-moz-background-size: cover;
+	-o-background-size: cover;
+	background-size: cover;
 }
 .container{
 	height: 100%;
